--- a/mediaflow_proxy/static/index.html
+++ b/mediaflow_proxy/static/index.html
@@ -112,6 +112,17 @@
     </p>
 </div>
 
+<div class="speed-test-section">
+    <h3>🔗 Playlist Builder</h3>
+    <p>Create and combine M3U playlists with automatic link rewriting for optimal streaming experience:</p>
+    <div class="speed-test-links">
+        <a href="/playlist/builder" class="speed-test-link browser">Playlist Builder</a>
+    </div>
+    <p style="margin-top: 10px; font-size: 14px; color: #666;">
+        <strong>Playlist Builder:</strong> Combine multiple M3U playlists, automatically rewrite links for optimal streaming, and support custom headers for enhanced compatibility.
+    </p>
+</div>
+
 <h2>Getting Started</h2>
 <p>Visit the <a href="https://github.com/mhdzumair/mediaflow-proxy">GitHub repository</a> for installation instructions and documentation.</p>
 
