--- a/mediaflow_proxy/static/index.html
+++ b/mediaflow_proxy/static/index.html
@@ -99,6 +99,7 @@
 <div class="feature">Handle both live and video-on-demand (VOD) DASH streams</div>
 <div class="feature">Proxy HTTP/HTTPS links with custom headers</div>
 <div class="feature">Proxy and modify HLS (M3U8) streams in real-time with custom headers and key URL modifications for bypassing some sneaky restrictions.</div>
+<div class="feature">HLS and DASH pre-buffering for improved streaming performance and reduced latency</div>
 <div class="feature">Protect against unauthorized access and network bandwidth abuses</div>
 
 <div class="speed-test-section">
