Add Xtream Codes (XC) API proxy support
- Introduced a stateless XC API proxy for IPTV players, enabling support for live streams, VOD, series, and catch-up/timeshift functionalities.
- Updated README.md to document the new XC proxy features and configuration instructions.
- Added new routes for XC API endpoints, including player_api.php, xmltv.php, and panel_api.php, with proper URL rewriting for seamless integration.
- Enhanced the URL generator to support XC configuration, allowing users to easily set up their IPTV players with MediaFlow as a proxy.
- Improved static files to reflect the new XC proxy capabilities and provide user guidance.

--- a/mediaflow_proxy/static/index.html
+++ b/mediaflow_proxy/static/index.html
@@ -159,13 +159,21 @@
                     </span>
                     <span class="text-gray-700 dark:text-gray-300 text-sm">HLS and DASH pre-buffering for improved streaming performance</span>
                 </div>
-                <div class="feature-item flex items-start gap-3 p-4 rounded-xl bg-gray-50 dark:bg-gray-700/50 border border-gray-100 dark:border-gray-700 md:col-span-2">
+                <div class="feature-item flex items-start gap-3 p-4 rounded-xl bg-gray-50 dark:bg-gray-700/50 border border-gray-100 dark:border-gray-700">
                     <span class="text-indigo-500 mt-0.5">
                         <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
                             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
                         </svg>
                     </span>
                     <span class="text-gray-700 dark:text-gray-300 text-sm">Protect against unauthorized access and network bandwidth abuses</span>
+                </div>
+                <div class="feature-item flex items-start gap-3 p-4 rounded-xl bg-gray-50 dark:bg-gray-700/50 border border-gray-100 dark:border-gray-700">
+                    <span class="text-indigo-500 mt-0.5">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
+                        </svg>
+                    </span>
+                    <span class="text-gray-700 dark:text-gray-300 text-sm">Xtream Codes (XC) API proxy for IPTV with catch-up/timeshift support</span>
                 </div>
             </div>
         </div>
@@ -176,7 +184,7 @@
             Tools
         </h2>
         
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10 animate-slide-up" style="animation-delay: 0.3s;">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-10 animate-slide-up" style="animation-delay: 0.3s;">
             <!-- Speed Test Card -->
             <a href="/speedtest" class="tool-card block bg-white dark:bg-gray-800 rounded-2xl shadow-xl overflow-hidden border border-gray-200 dark:border-gray-700 hover:shadow-2xl">
                 <div class="h-2 bg-gradient-to-r from-blue-500 to-cyan-500"></div>
@@ -215,6 +223,20 @@
                     <h3 class="text-lg font-bold text-gray-800 dark:text-white mb-2">URL Generator</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400">
                         Generate proxy URLs, extractor links for 21+ hosts, and encrypted URLs with custom options.
+                    </p>
+                </div>
+            </a>
+
+            <!-- XC Proxy Card -->
+            <a href="/url-generator#xc" class="tool-card block bg-white dark:bg-gray-800 rounded-2xl shadow-xl overflow-hidden border border-gray-200 dark:border-gray-700 hover:shadow-2xl">
+                <div class="h-2 bg-gradient-to-r from-orange-500 to-red-500"></div>
+                <div class="p-6">
+                    <div class="w-12 h-12 rounded-xl bg-gradient-to-br from-orange-500 to-red-500 flex items-center justify-center text-white text-2xl mb-4">
+                        📺
+                    </div>
+                    <h3 class="text-lg font-bold text-gray-800 dark:text-white mb-2">XC Proxy</h3>
+                    <p class="text-sm text-gray-600 dark:text-gray-400">
+                        Configure Xtream Codes proxy for IPTV players with catch-up and timeshift support.
                     </p>
                 </div>
             </a>
