Add Acestream proxy support
- Introduced Acestream proxy functionality, allowing users to proxy P2P streams through MediaFlow with support for both HLS and MPEG-TS output formats.
- Added new routes for Acestream manifest and segment proxying, enabling seamless integration with existing MediaFlow infrastructure.
- Updated README.md to document Acestream features, configuration options, and usage examples.
- Enhanced static files to include Acestream proxy information and URL generation capabilities.
- Implemented session management for Acestream streams, including automatic session cleanup and cross-process coordination.

--- a/mediaflow_proxy/static/index.html
+++ b/mediaflow_proxy/static/index.html
@@ -175,6 +175,14 @@
                     </span>
                     <span class="text-gray-700 dark:text-gray-300 text-sm">Xtream Codes (XC) API proxy for IPTV with catch-up/timeshift support</span>
                 </div>
+                <div class="feature-item flex items-start gap-3 p-4 rounded-xl bg-gray-50 dark:bg-gray-700/50 border border-gray-100 dark:border-gray-700">
+                    <span class="text-indigo-500 mt-0.5">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
+                        </svg>
+                    </span>
+                    <span class="text-gray-700 dark:text-gray-300 text-sm">Acestream P2P proxy with HLS and MPEG-TS output support</span>
+                </div>
             </div>
         </div>
 
@@ -184,7 +192,7 @@
             Tools
         </h2>
         
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-10 animate-slide-up" style="animation-delay: 0.3s;">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-6 mb-10 animate-slide-up" style="animation-delay: 0.3s;">
             <!-- Speed Test Card -->
             <a href="/speedtest" class="tool-card block bg-white dark:bg-gray-800 rounded-2xl shadow-xl overflow-hidden border border-gray-200 dark:border-gray-700 hover:shadow-2xl">
                 <div class="h-2 bg-gradient-to-r from-blue-500 to-cyan-500"></div>
@@ -237,6 +245,20 @@
                     <h3 class="text-lg font-bold text-gray-800 dark:text-white mb-2">XC Proxy</h3>
                     <p class="text-sm text-gray-600 dark:text-gray-400">
                         Configure Xtream Codes proxy for IPTV players with catch-up and timeshift support.
+                    </p>
+                </div>
+            </a>
+
+            <!-- Acestream Proxy Card -->
+            <a href="/url-generator#acestream" class="tool-card block bg-white dark:bg-gray-800 rounded-2xl shadow-xl overflow-hidden border border-gray-200 dark:border-gray-700 hover:shadow-2xl">
+                <div class="h-2 bg-gradient-to-r from-teal-500 to-cyan-500"></div>
+                <div class="p-6">
+                    <div class="w-12 h-12 rounded-xl bg-gradient-to-br from-teal-500 to-cyan-500 flex items-center justify-center text-white text-2xl mb-4">
+                        🌐
+                    </div>
+                    <h3 class="text-lg font-bold text-gray-800 dark:text-white mb-2">Acestream Proxy</h3>
+                    <p class="text-sm text-gray-600 dark:text-gray-400">
+                        Generate URLs to proxy Acestream P2P content via HLS or MPEG-TS streams.
                     </p>
                 </div>
             </a>
