--- a/mediaflow_proxy/static/url_generator.html
+++ b/mediaflow_proxy/static/url_generator.html
@@ -277,7 +277,7 @@
                             <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Time Offset (seconds)</label>
                             <input type="number" id="hls-start-offset" placeholder="-18" step="0.1"
                                 class="input-field w-full sm:w-48 px-4 py-3 rounded-xl border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-gray-900 dark:text-white focus:outline-none focus:border-indigo-500 text-sm">
-                            <p class="text-xs text-gray-500 dark:text-gray-400 mt-1">Use negative values to start behind the live edge (e.g., -18 to start 18 seconds behind). This enables the prebuffer to work on live streams by creating headroom for prefetching segments.</p>
+                            <p class="text-xs text-gray-500 dark:text-gray-400 mt-1">Use negative values to start behind the live edge (e.g., -18 to start 18 seconds behind). This enables the prebuffer (if enabled in settings) to work on live streams by creating headroom for prefetching segments.</p>
                         </div>
                     </div>
                     
@@ -386,7 +386,7 @@
                             <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Time Offset (seconds)</label>
                             <input type="number" id="mpd-start-offset" placeholder="-18" step="0.1"
                                 class="input-field w-full sm:w-48 px-4 py-3 rounded-xl border border-gray-300 dark:border-gray-600 bg-white dark:bg-gray-800 text-gray-900 dark:text-white focus:outline-none focus:border-indigo-500 text-sm">
-                            <p class="text-xs text-gray-500 dark:text-gray-400 mt-1">Use negative values to start behind the live edge (e.g., -18 to start 18 seconds behind). This enables the prebuffer to work on live streams by creating headroom for prefetching segments.</p>
+                            <p class="text-xs text-gray-500 dark:text-gray-400 mt-1">Use negative values to start behind the live edge (e.g., -18 to start 18 seconds behind). This enables the prebuffer (if enabled in settings) to work on live streams by creating headroom for prefetching segments.</p>
                         </div>
                     </div>
                     
