--- a/mediaflow_proxy/static/url_generator.html
+++ b/mediaflow_proxy/static/url_generator.html
@@ -529,6 +529,7 @@
                             <option value="LuluStream">LuluStream</option>
                             <option value="DLHD">DLHD</option>
                             <option value="Fastream">Fastream</option>
+                            <option value="Freeshot">Freeshot</option>
                             <option value="TurboVidPlay">TurboVidPlay</option>
                             <option value="Vidmoly">Vidmoly</option>
                             <option value="Vidoza">Vidoza</option>
